<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_pin">Enter your 4-digit pin: </string>
    <string name="submit">Submit</string>
    <string name="enter_your_phone_number">Enter your phone number:</string>
    <string name="create_account">Create account</string>
    <string name="confirm_your_4_digit_pin">Confirm your 4-digit pin:</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="add_income">Add Income</string>
    <string name="add_amount_here">Add Amount here</string>
    <string name="enter_your_source_of_this_income">Enter your source of this income</string>
    <string name="add_an_extra_note_optional">Add an extra note (optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
</resources>