<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="12sp"
    android:layout_width="match_parent"
    android:layout_height="500sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/income_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        app:layout_constraintBottom_toTopOf="@id/source_input"
        android:hint="@string/add_amount_here"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/income_input"
        app:layout_constraintBottom_toTopOf="@id/source_input"
        android:gravity="center"
        android:layout_margin="20sp"
        >

        <Button
            android:id="@+id/btnDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/income_input"
            app:layout_constraintBottom_toTopOf="@id/source_input"
            android:text="@string/select_date"
            android:backgroundTint="@color/blue"
            />
        <TextView
            android:id="@id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/source_input"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintBottom_toTopOf="@id/extra_notes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:hint="@string/enter_your_source_of_this_income"
        />

    <EditText
        android:id="@+id/extra_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:hint="@string/add_an_extra_note_optional"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >
        <Button
            android:id="@+id/save_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:layout_margin="15sp"
            android:backgroundTint="@color/blue"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_margin="15sp"
            android:backgroundTint="@color/blue"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>